tests/comp/sem/invalid/add_booleans.mj
class A {

	public void test(boolean foo) {
		/*** foo = 3 + 3; ***/
	}

	public static void main(String[] args) {
	}

}
